--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   dio: ^4.0.4
   shared_preferences: ^2.0.13
   fluttertoast: ^8.0.9
+  flutter_swiper: ^1.1.6
+  event_bus: ^2.0.0 # 事件监听
+  status_bar_control: ^3.2.1
+  flutter_staggered_grid_view: ^0.6.1
 
 dev_dependencies:
   flutter_test:
