--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   event_bus: ^2.0.0 # 事件监听
   status_bar_control: ^3.2.1
   flutter_staggered_grid_view: ^0.6.1
+  transparent_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
