--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   status_bar_control: ^3.2.1
   flutter_staggered_grid_view: ^0.6.1
   transparent_image: ^2.0.0
+  cached_network_image: ^3.2.0
+  chewie: ^1.3.0
 
 dev_dependencies:
   flutter_test:
