--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +46,9 @@ dependencies:
   transparent_image: ^2.0.0
   cached_network_image: ^3.2.0
   chewie: ^1.3.0
+  webview_flutter: ^3.0.1
+  orientation: ^1.3.0
+  date_format: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -97,3 +102,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
+  class_name: S
+  main_locale: en
