--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,20 +35,24 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  dio: ^4.0.4
-  shared_preferences: ^2.0.13
-  fluttertoast: ^8.0.9
-  flutter_swiper: ^1.1.6
+  cupertino_icons: ^1.0.2 # 图标
+  dio: ^4.0.4 # 网络请求
+  shared_preferences: ^2.0.13 # 本地缓存
+  fluttertoast: ^8.0.9 # 提示弹框
+  flutter_swiper: ^1.1.6 # 轮播图
   event_bus: ^2.0.0 # 事件监听
-  status_bar_control: ^3.2.1
-  flutter_staggered_grid_view: ^0.6.1
+  status_bar_control: ^3.2.1 # 状态栏
+  flutter_staggered_grid_view: ^0.6.1 # 瀑布流布局
   transparent_image: ^2.0.0
-  cached_network_image: ^3.2.0
-  chewie: ^1.3.0
-  webview_flutter: ^3.0.1
-  orientation: ^1.3.0
-  date_format: ^2.0.5
+  cached_network_image: ^3.2.0 # 网络缓存图片
+  chewie: ^1.3.0 # 视频播主键
+  webview_flutter: ^3.0.1 # 网站
+  orientation: ^1.3.0 # 屏幕旋转插件
+  date_format: ^2.0.5 # 日期格式
+  url_launcher: ^6.0.20 # 打开url跳转
+  clipboard: ^0.1.3 # 剪切板功能
+  web_socket_channel: ^2.1.0
+  xml: ^5.3.1
 
 dev_dependencies:
   flutter_test:
