--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   clipboard: ^0.1.3 # 剪切板功能
   web_socket_channel: ^2.1.0
   xml: ^5.3.1
+  flutter_overlay: ^1.0.0
 
 dev_dependencies:
   flutter_test:
