--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2 # 图标
   dio: ^4.0.4 # 网络请求
   shared_preferences: ^2.0.13 # 本地缓存
-  fluttertoast: ^8.0.9 # 提示弹框
+  #ffluttertoast: ^8.0.9 # 提示弹框
   flutter_swiper: ^1.1.6 # 轮播图
   event_bus: ^2.0.0 # 事件监听
   status_bar_control: ^3.2.1 # 状态栏
